--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,13 @@ header a{
 header a:hover{
     color: whitesmoke;
 }
-.users-header {
+.pages-header {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.users-header button {
+.pages-header button {
     margin-left: 100px;
     margin-top: 11px;
     width: 107px;
